added config properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,19 +15,19 @@ quarkus.log.category."com.celigo".level=DEBUG
 # ================================================
 
 # Enable Debezium engine (set to true to activate)
-debezium.enabled=false
+debezium.enabled=true
 
-# MongoDB Connection (safe defaults - won't connect anywhere)
-# To enable: set debezium.enabled=true and update these properties
-debezium.mongodb.connection.string=mongodb://localhost:27017/testdb
+debezium.mongodb.connection.string=mongodb+srv://admin:admin@cluster0.6acw9jb.mongodb.net/testdb
+# Database and collection to monitor
 debezium.mongodb.database=testdb
 debezium.mongodb.collection=testcol
 
-# Debezium Engine Settings
+# Debezium Engine Settings (all configurable)
 debezium.connector.class=io.debezium.connector.mongodb.MongoDbConnector
 debezium.topic.prefix=cdc-poc
 debezium.snapshot.mode=no_data
 debezium.capture.mode=change_streams
+debezium.tasks.max=1
 
 # ================================================
 # Graceful Shutdown Configuration (Production)
