--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -42,11 +42,12 @@ quarkus.shutdown.timeout=5s
 # /readyz - Readiness probe (matches streaming service)
 # /shutdownServer - Graceful shutdown (matches streaming service /stopServer)
 
+
 # ================================================
-# Development Profile (enables Debezium for dev testing)
+# Debug Logging (applies to all profiles)
 # ================================================
-%dev.debezium.enabled=false
-%dev.quarkus.log.category."io.debezium".level=DEBUG
+quarkus.log.category."com.celigo.cdc".level=DEBUG
+quarkus.log.category."io.debezium".level=DEBUG
 # Note: Management interface not available in Quarkus 3.24.2
 # All endpoints available on main port 9123
 
