--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ quarkus.log.category."com.celigo".level=DEBUG
 # Debezium Configuration (DISABLED BY DEFAULT)
 # ================================================
 
-# Enable Debezium engine (set to true to activate)
+# Enable Debezium engine (enabled by default for POC)
 debezium.enabled=true
 
 debezium.mongodb.connection.string=mongodb+srv://admin:admin@cluster0.6acw9jb.mongodb.net/testdb
