Fix: Add loop protection and enhanced logging
- Added initialization guard to prevent multiple @PostConstruct calls
- Enhanced logging configuration to fix log4j conflicts
- Added proper resource cleanup on failure
- Disabled problematic log4j loggers
- Added console logging format for better readability
- Prevents 'Unrecoverable agent model looping detected' errors

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,10 +6,6 @@
 quarkus.http.port=9123
 quarkus.http.host=0.0.0.0
 
-# Logging Configuration
-quarkus.log.level=INFO
-quarkus.log.category."com.celigo".level=DEBUG
-
 # ================================================
 # Debezium Configuration (DISABLED BY DEFAULT)
 # ================================================
@@ -46,13 +42,22 @@ quarkus.shutdown.timeout=5s
 # ================================================
 # Debug Logging (applies to all profiles)
 # ================================================
+# Force console logging to ensure logs appear
+quarkus.log.console.enable=true
+quarkus.log.console.level=DEBUG
+quarkus.log.level=INFO
 quarkus.log.category."com.celigo.cdc".level=DEBUG
 quarkus.log.category."io.debezium".level=DEBUG
-# Note: Management interface not available in Quarkus 3.24.2
-# All endpoints available on main port 9123
 
-# To test Debezium in dev mode:
-# 1. Set %dev.debezium.enabled=true
-# 2. Ensure MongoDB is running on localhost:27017
-# 3. Create database 'testdb' with collection 'testcol'
-# 4. Run: ./mvnw quarkus:dev
+# MongoDB driver logs (INFO level to avoid spam)
+quarkus.log.category."org.mongodb.driver".level=INFO
+
+# Disable problematic loggers that cause conflicts
+quarkus.log.category."org.apache.log4j".level=OFF
+quarkus.log.category."log4j".level=OFF
+
+# Quarkus startup logs (INFO level)
+quarkus.log.category."io.quarkus".level=INFO
+
+# Console format for better readability
+quarkus.log.console.format=%d{yyyy-MM-dd HH:mm:ss,SSS} %-5p [%c{3.}] %s%e%n
