--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,29 +1,22 @@
 # ================================================
-# CDC POC Configuration
+# CDC POC Configuration (matches streaming-service pattern)
 # ================================================
 
 # Application Configuration
 quarkus.http.port=9123
 quarkus.http.host=0.0.0.0
 
-# ================================================
-# Debezium Configuration (DISABLED BY DEFAULT)
-# ================================================
+# MongoDB Configuration (matches streaming-service pattern)
+quarkus.mongodb.connection-string=mongodb+srv://admin:admin@cluster0.6acw9jb.mongodb.net/testdb
+quarkus.mongodb.database=testdb
 
-# Enable Debezium engine (enabled by default for POC)
+# CDC-specific configuration (no prefix, like streaming-service)
 debezium.enabled=true
-
-debezium.mongodb.connection.string=mongodb+srv://admin:admin@cluster0.6acw9jb.mongodb.net/testdb
-# Database and collection to monitor
-debezium.mongodb.database=testdb
-debezium.mongodb.collection=testcol
-
-# Debezium Engine Settings (all configurable)
-debezium.connector.class=io.debezium.connector.mongodb.MongoDbConnector
-debezium.topic.prefix=cdc-poc
-debezium.snapshot.mode=no_data
-debezium.capture.mode=change_streams
-debezium.tasks.max=1
+mongodb.collection=testcol
+topic.prefix=cdc-poc
+snapshot.mode=no_data
+capture.mode=change_streams
+tasks.max=1
 
 # ================================================
 # Graceful Shutdown Configuration (Production)
@@ -32,32 +25,18 @@ debezium.tasks.max=1
 # Enable graceful shutdown with timeout
 quarkus.shutdown.timeout=5s
 
-# Health checks configuration (matching streaming service)
-# /health - Custom health endpoint (simple text response)
-# /livez - Liveness probe (matches streaming service)
-# /readyz - Readiness probe (matches streaming service)
-# /shutdownServer - Graceful shutdown (matches streaming service /stopServer)
-
-
 # ================================================
-# Debug Logging (applies to all profiles)
+# Logging Configuration (matches streaming-service pattern)
 # ================================================
-# Force console logging to ensure logs appear
-quarkus.log.console.enable=true
-quarkus.log.console.level=DEBUG
+# Root logger level - set to WARN to suppress most library logs  
 quarkus.log.level=INFO
-quarkus.log.category."com.celigo.cdc".level=DEBUG
-quarkus.log.category."io.debezium".level=DEBUG
+quarkus.log.category."com.celigo".level=DEBUG
+quarkus.log.category."io.debezium".level=INFO
+quarkus.log.console.enable=true
 
-# MongoDB driver logs (INFO level to avoid spam)
-quarkus.log.category."org.mongodb.driver".level=INFO
+# Fix LogManager initialization order issue
+quarkus.log.category."org.jboss.logmanager".level=INFO
 
-# Disable problematic loggers that cause conflicts
-quarkus.log.category."org.apache.log4j".level=OFF
-quarkus.log.category."log4j".level=OFF
+# System properties to fix logging issues
+quarkus.native.additional-build-args=-Djava.util.logging.manager=org.jboss.logmanager.LogManager
 
-# Quarkus startup logs (INFO level)
-quarkus.log.category."io.quarkus".level=INFO
-
-# Console format for better readability
-quarkus.log.console.format=%d{yyyy-MM-dd HH:mm:ss,SSS} %-5p [%c{3.}] %s%e%n
